# pitchPRO

./: README.md  demo_streamlit.py  llm_client.py  main.py  package-lock.json  pitch_fixed_downloaded.pptx  pyproject.toml  read_pptx.py  requirements.txt  simple_pptx_test.py  test_simple.pptx
app/: main.py
frontend/src/: App.css  App.jsx  index.css
output/0055c38d/: pitch.json  pitch.pptx  raw_llm.txt  status.json
output/006f0f54/: pitch.json  pitch.pptx  raw_llm.txt  status.json
output/019ee697/: status.json
output/01c436b1/: pitch.pptx  status.json
output/1056b2ae/: raw_llm.txt  status.json
output/1144b9b3a3e7/: pitch.pptx  status.json
output/12caddc7/: pitch.json  pitch.pptx  raw_llm.txt  status.json
output/1ae6639e/: pitch.json  pitch.pptx  status.json
output/1bd88fbb/: pitch.json  raw_llm.txt  status.json
output/1c863b60/: pitch.json  pitch.pptx  raw_llm.txt  status.json
output/2632442c/: pitch.pptx  status.json
output/2920268216d6/: pitch.json  pitch.pptx  status.json
output/2f24f16e/: pitch.json  pitch.pptx  raw_llm.txt  status.json
output/2f35db02/: pitch.json  pitch.pptx  raw_llm.txt  status.json
output/34d34369/: status.json
output/35cda257/: pitch.pptx  status.json
output/3db24e7e/: status.json
output/51296992/: status.json
output/5b63ced9cdc2/: pitch.pptx  status.json
output/623627ac/: pitch.json  pitch.pptx  raw_llm.txt  status.json
output/69a5c57c/: pitch.json  pitch.pptx  (+2 more)
sample_data/: sample_pitch.json
tools/: build_safe_pptx.py  rebuild_pptx_for_job.py
utils/: pptx_builder.py
worker/: process_job.py
(+146 files in other folders)
